// Copyright (c) 2023 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v2;

import "com/digitalasset/canton/protocol/v1/mediator.proto";
import "com/digitalasset/canton/protocol/v1/mediator_response.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "scalapb/scalapb.proto";

// Changes from v1:
// Removed field notification_tree
// Added fields root_hash, domain_id
message TransactionResultMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  google.protobuf.Timestamp request_id = 1;
  Verdict verdict = 2;
  bytes root_hash = 3;
  string domain_id = 4;
}

message Verdict {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  oneof some_verdict {
    google.protobuf.Empty approve = 1;
    ParticipantReject participant_reject = 2; // new version
    com.digitalasset.canton.protocol.v1.MediatorReject mediator_reject = 3;
  }
}

message ParticipantReject {
  repeated RejectionReason reasons = 1; // new version
}

message RejectionReason {
  repeated string parties = 1;
  com.digitalasset.canton.protocol.v1.LocalReject reject = 2; // Using v1.LocalReject instead of v0.LocalReject
}
